--- a/ae/ae-03-inference.qmd
+++ b/ae/ae-03-inference.qmd
@@ -41,57 +41,24 @@ We want to conduct a hypothesis test to determine if there is a linear relations
 
 We'll start by getting estimates for statistics we'll need for inference.
 
-::: callout-note
 ## Exercise 1
 
 We will use the vector of responses $\mathbf{y}$ and the design matrix $\mathbf{X}$ to calculate the values needed for inference.
 
 Get $\mathbf{y}$ and $\mathbf{X}$ from the football data frame. What are their dimensions?
-:::
 
-```{r}
-#| label: ex-1
-
-# add code here
-
-```
-
-::: callout-note
 ## Exercise 2
 
 Next, let's calculate $\hat{\sigma}_\epsilon^2$ the estimate. Use $\mathbf{y}$ and $\mathbf{X}$ from the previous exercise to calculate this value.
-:::
 
-```{r}
-#| label: ex-2
-
-## add code here
-
-```
-
-::: callout-note
 ## Exercise 3
 
-Now we're ready to conduct the hypothesis test. State the null and alternative hypotheses in words and using mathematical notation.
-:::
+Now we're ready to conduct the hypothesis test between enrollment and football expenditures. State the null and alternative hypotheses in words and using mathematical notation.
 
-. . .
-
-::: callout-note
 ## Exercise 4
 
 Calculate $SE(\beta_j)$, then use this value to calculate the test statistic for the hypothesis test.
-:::
 
-```{r}
-#| label: ex-4
-
-
-## add code here
-
-```
-
-::: callout-note
 ## Exercise 5
 
 Now we need to calculate p-value to help make our final conclusion.
@@ -99,23 +66,18 @@ Now we need to calculate p-value to help make our final conclusion.
 -   State the distribution used to calculate the p-value.
 
 -   Fill in the code below to calculate the p-value. Remove `#| eval: false` once you've filled in the code.
-:::
 
 ```{r}
 #| label: ex-5
 #| eval: false
 
-pt([test-statistic], [df], lower.tail = FALSE)
+2 * pt([test-statistic], [df], lower.tail = FALSE)
 
 ```
 
-::: callout-note
 ## Exercise 6
 
 State your conclusion in the context of the data. Use a threshold of $\alpha = 0.05$.
-:::
-
-. . .
 
 ::: callout-important
 # Submission
