--- a/slides/lab-03.qmd
+++ b/slides/lab-03.qmd
@@ -48,7 +48,7 @@ What is your favorite place to eat at Brodhead Center (West Union)?
 
 ## Meet your team!
 
--   [**Click**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ)[ **here**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ) to find your team.
+-   [**Clickhere**](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/EWmBSHOfYhJLlxYJKEDFpT8BZNmQsC41rm4hA6uaOqrA1w?e=sUNxBJ) to find your team.
 
 -   Sit with your team.
 
