add feb 11 lectures slides.

--- a/ae/ae-03-inference.qmd
+++ b/ae/ae-03-inference.qmd
@@ -49,7 +49,7 @@ Get $\mathbf{y}$ and $\mathbf{X}$ from the football data frame. What are their d
 
 ## Exercise 2
 
-Next, let's calculate $\hat{\sigma}_\epsilon^2$ the estimate. Use $\mathbf{y}$ and $\mathbf{X}$ from the previous exercise to calculate this value.
+Next, let's calculate $\hat{\sigma}_\epsilon^2$ the estimated regression standard error. Use $\mathbf{y}$ and $\mathbf{X}$ from the previous exercise to calculate this value.
 
 ## Exercise 3
 
@@ -57,7 +57,7 @@ Now we're ready to conduct the hypothesis test between enrollment and football e
 
 ## Exercise 4
 
-Calculate $SE(\beta_j)$, then use this value to calculate the test statistic for the hypothesis test.
+Calculate $SE(\hat{\beta}_j)$, then use this value to calculate the test statistic for the hypothesis test.
 
 ## Exercise 5
 
