--- a/exam-01-practice.qmd
+++ b/exam-01-practice.qmd
@@ -3,7 +3,7 @@ title: Exam 01 practice
 ---
 
 ::: callout-important
-This page contains practice problems to help prepare for Exam 01. This set of practice problems is <u>**not**</u> comprehensive. You should review these [study tips](https://sta221-fa24.netlify.app/slides/23-logistic-regression-review#/tips-for-studying) <!--# update this link--> as you prepare for the exam.\
+This page contains practice problems to help prepare for Exam 01. This set of practice problems is <u>**not**</u> comprehensive. You should review these [study tips](/slides/10-inference-pt3#/tips-for-studying) as you prepare for the exam.\
 \
 There is no answer key for these problems. You may ask questions in office hours and on Ed Discussion.
 :::
