add var Az rule

--- a/math-rules.qmd
+++ b/math-rules.qmd
@@ -143,6 +143,17 @@ $Var(\mathbf{z}) = \begin{bmatrix}Var(z_1) & Cov(z_1, z_2) & \dots & Cov(z_1, z_
 
 <hr>
 
+### Variance of $\mathbf{Az}$ 
+
+Let $\mathbf{A}$ be an $n \times p$ matrix of constants and $\mathbf{z}$ a $p \times 1$ vector of random variables. Then
+
+$$
+\begin{aligned}
+Var(\mathbf{Az}) &= E[(\mathbf{Az} - E(\mathbf{Az}))(\mathbf{Az} - E(\mathbf{Az}))^\mathsf{T}] \\
+& = \mathbf{A}Var(\mathbf{z})\mathbf{A}^\mathsf{T}
+\end{aligned}
+$$
+
 ## Probability distributions
 
 ### Multivariate normal distribution
